<resources>
    <string name="app_name">MoveMate</string>
    <string name="no_data">No data to show</string>
    <string name="tracking">Tracking</string>
    <string name="hint_enter_the_receipt_number">Enter the receipt number…</string>
    <string name="available_vehicles">Available Vehicles</string>
    <string name="value_placeholder">Value Placeholder</string>
    <string name="label_placeholder">Label Placeholder</string>
    <string name="back_to_home">Back to home</string>
    <string name="amount_estimated_confirmation_note">This amount is estimated. This will vary if you change your location or weight.</string>
    <string name="total_estimated_amount">Total Estimated Amount</string>
    <string name="calculate">Calculate</string>
    <string name="destination">Destination</string>
    <string name="packaging">Packaging</string>
    <string name="what_are_you_sending">What are you sending?</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In-progress</string>
    <string name="pending">Pending</string>
    <string name="loading">Loading</string>
    <string name="cancelled">Cancelled</string>
    <string name="add_stop">Add Stop</string>
    <string name="your_location">Your location</string>
    <string name="wertheimer_illinois">Wertheimer, Illinois</string>
    <string name="box">Box</string>
    <string name="app_logo">App Logo</string>
    <string name="documents">Documents</string>
    <string name="glass">Glass</string>
    <string name="liquid">Liquid</string>
    <string name="food">Food</string>
    <string name="electronic">Electronic</string>
    <string name="product">Product</string>
    <string name="others">Others</string>
    <string name="home">Home</string>
    <string name="shipment">Shipment</string>
    <string name="profile">Profile</string>
    <string name="shipment_history">Shipment History</string>
    <string name="arriving_today">Arriving today!</string>
    <string name="shipment_info">Your delivery NEJ20089934122231 from Atlanta will arrive today.</string>
    <string name="dummy_amount_usd">$1400 USD</string>
    <string name="dummy_date">Sept 20, 2023</string>
    <string name="shipment_number">Shipment Number</string>
    <string name="dummy_id">NEJ20089934122231</string>
    <string name="shipments">Shipments</string>
    <string name="parcel_box">Parcel Box</string>
    <string name="search_bar_transition">search_bar_transition</string>
    <string name="app_bar_title_transition">app_bar_title_transition</string>
    <string name="app_bar_transition">app_bar_transition</string>
</resources>