<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    style="@style/CardView.Main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0"
    android:translationY="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/card_view_body_padding_16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_progress"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="1dp"
                android:paddingBottom="2dp"
                android:gravity="center_vertical"
                app:drawableTint="@color/status_in_progress"
                android:textColor="@color/status_in_progress"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/status_in_progress_18px"
                android:background="@drawable/shipment_status_rounded_bg"
                android:textSize="13sp"
                style="@style/TextAppearance.PrimaryText" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/arriving_today"
                style="@style/TextAppearance.PrimaryText" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipment_info"
                style="@style/TextAppearance.SecondaryText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_amount_usd"
                    style="@style/TextAppearance.PrimaryText"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/secondary_text_size" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/dummy_date"
                    style="@style/TextAppearance.PrimaryText"
                    android:textSize="@dimen/secondary_text_size"
                    android:textColor="@color/colorSecondaryText"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/delivery_parcel_large" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>