<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/card_margin_16dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo_image"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/app_logo"
                app:layout_constraintBottom_toTopOf="@id/iv_confirmation_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45"
                app:layout_constraintVertical_chainStyle="packed"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/iv_confirmation_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_app_name"
                    style="@style/TextAppearance.AppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:text="@string/app_name" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_app_logo_small"
                    android:layout_width="@dimen/icon_size_small"
                    android:layout_height="@dimen/icon_size_small"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:contentDescription="@string/app_logo"
                    app:tint="@color/button_orange"
                    android:src="@drawable/delivery_van_regular_px" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_confirmation_icon"
                android:layout_width="@dimen/icon_size_large"
                android:layout_height="@dimen/icon_size_large"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/parcel_box"
                android:src="@drawable/delivery_parcel_large"
                app:layout_constraintBottom_toTopOf="@id/layout_amount_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo_image" />


            <LinearLayout
                android:id="@+id/layout_amount_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/iv_confirmation_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_amount_label"
                    style="@style/TextAppearance.AmountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_estimated_amount" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_amount_value"
                    style="@style/TextAppearance.AmountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_confirmation_note"
                    style="@style/TextAppearance.ConfirmationNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/amount_estimated_confirmation_note"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_back_to_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/back_to_home"
                    app:backgroundTint="@color/button_orange" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>